--- a/Pixel Art Resizer/Resources/Info.plist
+++ b/Pixel Art Resizer/Resources/Info.plist
@@ -46,7 +46,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 Blue Husky Studios BH-1-PS</string>
+	<string>Copyright © 2019 Ben Leggiero BH-2-PC</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
